@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.23) unstable; urgency=low
   * sink-header: support splice
   * memcached-client: support splice (response)
   * fcgi-client: recover correctly after send error
+  * fcgi-client: support chunked request body
   * http-cache: duplicate headers
   * {http,memcached}-client: check "direct" mode after buffer flush
   * cmdline: added option "fcgi_stock_limit"
